# stm32-sequencer

./: .embed.toml  .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
src/: constants.rs  inputs.rs  keyboard.rs  led.rs  main.rs  outputs.rs  sequencer.rs  track.rs
