[package]
edition = "2021"
readme = "README.md"
name = "sequencer"
version = "0.1.0"
rust-version = "1.64"
license = "MIT"
publish = false

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
# tinyrand = "0.5.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
keypad = "0.2.2"
ws2812-spi = "0.4.0"
smart-leds = "0.3.0"
embedded-hal = "0.2.7"
mcp49xx = "0.3.0"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["stm32f103", "rt", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "sequencer"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
